--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,3 +70,7 @@ dependencies {
     annotationProcessor "androidx.room:room-compiler:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
 }
+
+kapt {
+    correctErrorTypes true
+}
